--- a/igloo/igloo-webjars/bootstrap-override/src/main/webjars/scss/_variables.scss
+++ b/igloo/igloo-webjars/bootstrap-override/src/main/webjars/scss/_variables.scss
@@ -101,6 +101,8 @@ $zindex-modal:						1050 !default;
 $zindex-popover:					1060 !default;
 $zindex-tooltip:					1070 !default;
 
+$zindex-modal-date-picker:			1099 !default;
+
 $zindex-alert-global:				1100 !default;
 $zindex-alert-global-close:			1101 !default;
 $zindex-scroll-to-top:				1035 !default;
